<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity"
    android:padding="30dp">


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:id="@+id/deco1"
                android:layout_width="wrap_content"
                android:layout_height="7dp"
                android:layout_marginBottom="15dp"
                android:background="@color/light_pink"
                android:divider="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="100dp"
                    android:background="@drawable/shape"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>

            <View
                android:id="@+id/deco2"
                android:layout_width="wrap_content"
                android:layout_height="7dp"
                android:divider="@android:color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_pink" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/filter" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:id="@+id/deco3"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:divider="@android:color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/light_pink" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/filterBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filterBtn" />

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="527dp"
        android:background="@drawable/border_ui"/>

    </ScrollView>

</LinearLayout>
